# toypa

./: Cargo.toml  README.md
src/: accounts.rs  datagen.rs  input.rs  main.rs  output.rs  simple_fp.rs  transaction.rs
testdata/: input.csv
