[package]
name = "toypa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
default-run = "main"
#default-run = "datagen"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "datagen"
path = "src/datagen.rs"



[dependencies]
csv = "1.1.6"
csv-async = { version = "1.2.4", features = ["tokio", "tokio-stream"] }
fixed = { version = "1.14.0", features = ["serde", "serde-str", "std"] }
rand = "0.8.5"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-stream = "0.1.8"
